Fix issue with left tab sizing, GDS grids are designed to have set gaps, by removing them the sizing is off so the width is too wide. Simplified to just set the width for left and right.

--- a/src/AppBundle/Resources/assets/scss/digideps/_leftnav.scss
+++ b/src/AppBundle/Resources/assets/scss/digideps/_leftnav.scss
@@ -3,14 +3,13 @@ $darkblue: #175ea5;
 .left-nav-container {
     
     @extend %site-width-container;
-    
-    .row {
-        @extend %grid-row;
-    }
+    @extend %contain-floats;
     
     .left-nav {
-        
-        @include grid-column(1 / 4);
+        box-sizing: border-box;
+        width: 25%;
+        float: left;
+        margin: 0;
         padding: 0;
         
         nav a {
@@ -37,7 +36,11 @@ $darkblue: #175ea5;
     }
     
     .right-content {
-        @include grid-column(3 / 4);
+        box-sizing: border-box;
+        width: 75%;
+        float: left;
+        margin: 0;
+        padding: 0 15px;
         border-left: 1px solid $grey-2;
 
         > h1:first-child,
@@ -53,4 +56,3 @@ $darkblue: #175ea5;
     }
     
 }
-
